# johnkeats-ai

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh
.local_only/: antigravity-build-brief.md  antigravity-implementation-plan.md
.local_only/directives/: README.md  list_workspace.md
.local_only/execution/: README.md  ls_files.py
backend/app/: .env.example  .gitignore  Dockerfile  deploy.sh  diagnostic_auth.py  env_file  main.py  pyproject.toml
backend/app/agents/: annotation_validator.py  anonymiser.py  anonymiser_gate.py  baseline_agent.py  handshake.py  listener_agent.py  memory_consolidate.py  memory_ingest.py  memory_query.py  orchestrator_agent.py  pii_auditor.py  policy_gate.py  run_analysis.py  user_memory.py
backend/app/agents/prompts/: README.md  __init__.py  annotation-validator.md  anonymiser-annotations.md  anonymiser-contextual.md  listener-curiosity.md  listener-emotional-match.md  listener-image-quality.md  listener-rubric.md  memory-consolidate.md  memory-ingest.md  orchestrator.md  pii-auditor.md
backend/app/johnkeats_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/keats_agent/: __init__.py  agent.py
backend/app/knowledge-base/: kb-01-keats-philosophy.txt  kb-03-user-antipatterns.txt
backend/app/static/: index.html
backend/app/static/css/: style.css
backend/app/static/js/: app.js  orb.js
backend/app/tools/: __init__.py  passage_tools.py
knowledge-base/: kb-01-keats-philosophy.txt  kb-02-conversation-patterns.txt  kb-03-user-antipatterns.txt  kb-04-boundaries-and-safety.txt
